# unfair-flips-analysis

./: .gitignore  README.md  pyproject.toml
unfair_flips/: analyze.py  constants.py  game.py  optimizer.py
